# build-hook

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  access.template.yaml  k8s.minikube.yaml  k8s.secrets.template.yaml  k8s.yaml
.github/workflows/: build-hook.yaml  curl-example.yaml
src/: api.rs  auth.rs  buildx.rs  config.rs  kube.rs  main.rs
src/project/: image.rs  mod.rs  repo.rs
